welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:52: error: '(' expected but identifier found.
    else if getDirection() == Direction.WEST)
            ^SnakeBuggle:71: error: illegal start of simple expression
  }
  ^